[package]
name = "rust3denginetest"
version = "0.1.0"
authors = [""]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
incremental = true

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image", "gfx"]